# text_improvement_engine

./: .gitignore  README.md  pyproject.toml
text_improvement_engine/: app_cli.py  app_gui.py  engine.py
